change name + change icon

--- a/iosApp/Configuration/Config.xcconfig
+++ b/iosApp/Configuration/Config.xcconfig
@@ -1,6 +1,6 @@
 TEAM_ID=
 
-PRODUCT_NAME=TestKMP
+PRODUCT_NAME=DoIt
 PRODUCT_BUNDLE_IDENTIFIER=org.example.projectrr.TestKMP$(TEAM_ID)
 
 CURRENT_PROJECT_VERSION=1
